--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "backend",
+  "name": "web-b",
   "version": "1.0.0",
-  "description": "backend of project FindaService",
-  "main": "app.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@escook/express-joi": "^1.1.1",
+    "@hapi/joi": "^17.1.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "joi": "^17.9.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1"
   }
 }
