--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "backend of project FindaService",
-  "main": "app.js",
+  "main": "./app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "joi": "^17.9.1"
+    "joi": "^17.9.1",
+    "mongodb": "^5.2.0",
+    "mongoose": "^7.0.3"
   }
 }
