--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,5 +58,7 @@
     "@ant-design/icons": "^5.0.1",
     "@babel/plugin-proposal-decorators": "^7.7.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.5"
-  }
+  },
+  "proxy": "http://localhost:3000"
+  
 }
