--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "react-draft-wysiwyg": "^1.14.4",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.0.5",
     "store": "^2.0.12",
     "wangeditor": "^3.1.1",
@@ -60,5 +60,4 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.5"
   },
   "proxy": "http://localhost:3000"
-  
 }
