--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "draftjs-to-html": "^0.9.1",
     "echarts": "^4.6.0",
     "echarts-for-react": "^2.0.15-beta.1",
+    "emailjs-com": "^3.2.0",
     "html-to-draftjs": "^1.5.0",
     "jsonp": "^0.2.1",
     "less": "^3.13.1",
